--- a/style.css
+++ b/style.css
@@ -1,111 +1,81 @@
-       body {
-        position: absolute;
-        width: 1612px;
-        height: 1024px;
-        left: -23px;
-        top: 0px;
-        
-        background: url(wall-e-wallpaper-3.jpg);
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body, .container, .container2 {
+    min-height: 100vh;
+}
+
+       .topnav{
+        color: #ffffff;
+        font-family: 'PT Sans', sans-serif;
+        padding: 100px;
+        margin-right: 350px;
+        margin-bottom: 50px;
+       /* background: chartreuse;
+        position: absolute;*/
+        /*width: 409px;
+        height: 47px;
+        right: 50px;
+        top: 615px;*/
+        /*float: right;*/
        }
-       
-       .modal {
-           display: none;
-           position: fixed;
-           z-index: 1;
-           left: 0;
-           top: 0;
-           width: 100%;
-           height: 100%;
-           overflow: auto;
-           background-color: rgb(0, 0, 0);
-           background-color: rgba(0, 0, 0, 0.4);
-           -webkit-animation-name: fadeIn;
-           -webkit-animation-duration: 0.4s;
-           animation-name: fadeIn;
-           animation-duration: 0.4s
+       .topnav2{
+        color: #ffffff;
+        font-family: 'PT Sans', sans-serif;
+        padding: 100px;
+        margin-right: 200px;
+        margin-bottom: 400px;
+       /* background: chartreuse;
+        position: absolute;*/
+        /*width: 409px;
+        height: 47px;
+        right: 50px;
+        top: 615px;*/
+        /*float: right;*/
        }
-       
-       .modal-content {
-           position: fixed;
-           bottom: 0;
-           background-color: #fefefe;
-           width: 100%;
-           -webkit-animation-name: slideIn;
-           -webkit-animation-duration: 0.4s;
-           animation-name: slideIn;
-           animation-duration: 0.4s
+       /*.wave {
+        background: url("Vector2.png") no-repeat;
+        margin: 0px, 0px;
+        background-size: cover;
+        object-fit: contain;
+        object-position: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-end;
+       }*/
+       .container{
+        margin: auto;
+        background: url("Background2.png") no-repeat;
+        background-size: cover;
+        object-fit: contain;
+        object-position: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-end;
        }
-       
-       .close {
-           color: white;
-           float: right;
-           font-size: 28px;
-           font-weight: bold;
-       }
-       
-       .close:hover,
-       .close:focus {
-           color: #000;
-           text-decoration: none;
-           cursor: pointer;
-       }
-       
-       .modal-header {
-           padding: 2px 16px;
-           background-color: #5cb85c;
-           color: white;
-       }
-       
-       .modal-body {
-           padding: 2px 16px;
-       }
-       
-       .modal-footer {
-           padding: 2px 16px;
-           background-color: #5cb85c;
-           color: white;
-       }
-       
-       #myModal {
-           display: none;
-       }
-       
-       @-webkit-keyframes slideIn {
-           from {
-               bottom: -300px;
-               opacity: 0
+       .container2{
+            margin: auto;
+            background: url("Desktop.png") no-repeat;
+            background-size: cover;
+            object-fit: contain;
+            object-position: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            align-items: flex-end;
            }
-           to {
-               bottom: 0;
-               opacity: 1
-           }
-       }
-       
-       @keyframes slideIn {
-           from {
-               bottom: -300px;
-               opacity: 0
-           }
-           to {
-               bottom: 0;
-               opacity: 1
-           }
-       }
-       
-       @-webkit-keyframes fadeIn {
-           from {
-               opacity: 0
-           }
-           to {
-               opacity: 1
-           }
-       }
-       
-       @keyframes fadeIn {
-           from {
-               opacity: 0
-           }
-           to {
-               opacity: 1
-           }
-       }
+
+       a{
+        color: #ffffff;
+        font-family: 'PT Sans', sans-serif;
+        text-decoration: none;
+        font-size: 37px;
+        padding-right: 20px;
+    }
+         
+      
