--- a/style.css
+++ b/style.css
@@ -12,70 +12,246 @@ html, body, .container, .container2 {
         color: #ffffff;
         font-family: 'PT Sans', sans-serif;
         padding: 100px;
-        margin-right: 350px;
-        margin-bottom: 50px;
-       /* background: chartreuse;
-        position: absolute;*/
-        /*width: 409px;
-        height: 47px;
-        right: 50px;
-        top: 615px;*/
-        /*float: right;*/
+        margin-right: 190px;
+        margin-top: 700px;
+        
        }
        .topnav2{
         color: #ffffff;
         font-family: 'PT Sans', sans-serif;
-        padding: 100px;
-        margin-right: 200px;
-        margin-bottom: 400px;
-       /* background: chartreuse;
-        position: absolute;*/
-        /*width: 409px;
-        height: 47px;
-        right: 50px;
-        top: 615px;*/
-        /*float: right;*/
+        margin-right: 300px;
+        margin-top: 290px;
        }
-       /*.wave {
-        background: url("Vector2.png") no-repeat;
-        margin: 0px, 0px;
-        background-size: cover;
-        object-fit: contain;
-        object-position: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        align-items: flex-end;
-       }*/
+       .topnav4{
+        color: #ffffff;
+        font-family: 'PT Sans', sans-serif;
+        margin-right: 300px;
+        margin-top: 420px;
+       }
        .container{
         margin: auto;
-        background: url("Background2.png") no-repeat;
+        background: url("images/Background2.png") no-repeat;
         background-size: cover;
         object-fit: contain;
         object-position: center;
         display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        align-items: flex-end;
+        justify-content: space-between;
+        align-items: center;
        }
        .container2{
             margin: auto;
-            background: url("Desktop.png") no-repeat;
+            background: url("images/Desktop.png") no-repeat;
             background-size: cover;
             object-fit: contain;
             object-position: center;
             display: flex;
-            flex-direction: column;
-            justify-content: flex-end;
-            align-items: flex-end;
+            justify-content: space-between;
+            align-items: center;
            }
 
-       a{
+    a{
         color: #ffffff;
         font-family: 'PT Sans', sans-serif;
         text-decoration: none;
-        font-size: 37px;
+        font-size: 35px;
         padding-right: 20px;
     }
-         
-      
+    
+    .story{
+        
+        color: #ffffff;
+        font-family: 'PT Sans', sans-serif;
+        font-size: 37px;
+        margin-left:278px;
+        margin-top: 470px;
+        text-align: left;
+        
+    }
+    .story-txt{
+        color: #ffffff;
+        font-family: 'PT Sans', sans-serif;
+        font-size: 18px;
+        width: 500px;
+    }
+    .about{
+        
+        color: #ffffff;
+        font-family: 'PT Sans', sans-serif;
+        font-size: 37px;
+        margin-left:278px;
+        margin-top: 470px;
+        text-align: left;
+        
+    }
+    .about-txt{
+        color: #ffffff;
+        font-family: 'PT Sans', sans-serif;
+        font-size: 18px;
+        width: 500px;
+        text-align: left;
+    }
+    .ben{
+        
+        color: #ffffff;
+        font-family: 'PT Sans', sans-serif;
+        font-size: 35px;
+        margin-left:278px;
+        margin-top: 520px;
+        display: flex;
+        text-align: left;
+        
+    }
+    .ben-txt{
+        color: #ffffff;
+        font-family: 'PT Sans', sans-serif;
+        font-size: 16px;
+        width: 450px;
+        
+    }
+    .elissa{
+        
+        color: #ffffff;
+        font-family: 'PT Sans', sans-serif;
+        font-size: 35px;
+        margin-left:278px;
+        margin-top: 25px;
+        display: flex;
+        text-align: left;
+        
+    }
+    .elissa-txt{
+        color: #ffffff;
+        font-family: 'PT Sans', sans-serif;
+        font-size: 16px;
+        width: 450px;
+    }
+    .andrew{
+        
+        color: #ffffff;
+        font-family: 'PT Sans', sans-serif;
+        font-size: 35px;
+        margin-top: 140px;
+        display: flex;
+        text-align: left;
+        
+        
+        
+    }
+    .andrew-txt{
+        color: #ffffff;
+        font-family: 'PT Sans', sans-serif;
+        font-size: 16px;
+        width: 450px;
+    }
+    .actor{
+        margin-right: 20px;
+        height: 20%;
+        width: 20%;
+    }
+    .making{
+        
+        color: #ffffff;
+        font-family: 'PT Sans', sans-serif;
+        font-size: 35px;
+        margin-top: 50px;
+        text-align: left;
+        
+    }
+    .video{
+        color: #ffffff;
+        font-family: 'PT Sans', sans-serif;
+        font-size: 37px;
+        margin-left:278px;
+        margin-top: 200px; 
+
+    }
+    #closer_videopopup{
+        position: absolute;
+        display: table-cell;
+        right: 2%;
+        top: 2%;
+        font-size: 32px;
+        text-align: center;
+        vertical-align: middle;
+        padding: auto;
+        cursor: default;
+        background: none;
+        border: none;
+        color: #ffffff;
+    
+    
+        z-index: 100004;
+    }
+    #opct{
+        position: fixed;
+        z-index: 100000;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left:0;
+        bottom: 0;
+        right: 0;
+        filter: alpha(opacity=80);
+        -moz-opacity: 0.80;
+        opacity: 0.8;
+    }
+    #videCont{
+        position: relative;
+        padding-bottom: 56.25%; /* 16:9 */
+        padding-top: 25px;
+        height: 0;
+        margin: auto;
+        max-width: 720px;
+        height: 0;
+        height: auto !important;
+    }
+    video{
+        position: absolute;
+        top: 15%;
+        left: 0;
+        width: 100%;
+        opacity: 1 !important;
+    
+    }
+    #video1{
+        cursor: pointer; cursor: hand;
+    }
+    html, body, #zoom {
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        text-align: center;
+    }
+    #zoom img {
+        height: 100%;
+        width: auto;
+        margin: auto;
+    }
+    #zoom img:not(.ui-draggable-dragging) {
+        cursor: grab;
+    }
+    #controls {
+        padding: 10px;
+        border-radius: 10px;
+        background: #333;
+        position: absolute;
+        top: -10px;
+        right: -10px;
+        padding-right: 20px;
+        padding-top: 20px;
+    }
+    #controls a {
+        color: #FFF;
+    }
+    #controls a:hover {
+        color: #CCC;
+    }
+    #controls i {
+        color: #FFF;
+        width: 30px;
+    }
+    #container {
+        height: 100%;
+    }
