--- a/style.css
+++ b/style.css
@@ -52,9 +52,13 @@ html, body, .container, .container2 {
     a{
         color: #ffffff;
         font-family: 'PT Sans', sans-serif;
-        text-decoration: none;
+        
         font-size: 35px;
         padding-right: 20px;
+    }
+
+    .otherpage{
+        text-decoration: none;
     }
     
     .story{
